# bplog

./: .flake8  .gitignore  LICENSE  MANIFEST.in  README.md  blood_pressure.db  bp.py  bplog_project.code-workspace  pyproject.toml  setup.cfg
.github/workflows/: linter.yml  testtypelint.yml
bplog/: __main__.py  bplog.db  bplog.py  test_bplog.py  utils.py
bplog_pkg/: __main__.py  bplog.db  test_bplog.py
src/bplog/: __main__.py  app.py  bplog.db
tests/: test_bplog.py  test_bplog_deps.py
