[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bplog"
version = "0.0.1"
description = "Simple cli data logger for blood pressure data"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["data logger", "blood pressure"]
authors = [{ email = "narfelchen@gmail.com" }, { name = "Narfel" }]
maintainers = [{ name = "Narfel", email = "narfelchen@gmail.com" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://github.com/narfel/bplog"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]

[project.optional-dependencies]
test = ["matplotlib", "prettytables"]

[project.scripts]
bplog = "src.bplog.app:main"

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::UserWarning"]
addopts = "--cov"
testpaths = ["tests/"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["matplotlib", "matplotlib.lines", "prettytable"]
ignore_missing_imports = true

[tool.tox]
legacy_tox_ini = """
    [tox]
    min_version = 4.0
    env_list =
        py311
        py39
        py38
        mypy
        pylint
    skipsdist = True

    [testenv]
    deps =
        matplotlib
        prettytable
        pytest
        pytest-cov
        mypy
        pylint

    commands = pytest src

    [testenv:mypy]
    deps = mypy
    commands = mypy src

    [testenv:pylint]
    deps = pylint
    commands = pylint src

"""

[tool.black]
line-length = 88

[tool.pylint.'MESSAGES CONTROL']
disable = [
  "unused-argument",
  "import-outside-toplevel",
  "missing-function-docstring",
  "missing-class-docstring",
  "no-else-return",
]
