[mypy]
ignore_missing_imports = True
check_untyped_defs = True

[coverage:run]
omit =
    test_bplog.py

[metadata]
name = bplog
author = Narfelchen
author_email = narfelchen@gmail.com
description = Blood Pressure CLI logger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.10
include_package_data = True
install_requires =
    matplotlib
    prettytables
