[metadata]
name = bplog
version = 0.0.1
author = Narfelchen
author_email = narfelchen@gmail.com
description = Blood Pressure CLI logger
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/
classifiers =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[mypy]
ignore_missing_imports = True
check_untyped_defs = True

[coverage:run]
omit =
    test_bplog.py

[options]
options =
    = src
packages = find:
python_requires = >= 3.10
include_package_data = True
install_requires =
    matplotlib
    prettytables

[options.packages.find]
where = src